src/test/deca/context/invalid/testNotAMethod.deca
// Description : La méthode appelée n'est pas une méthode
class A {
    int b;
}
{
    A a = new A();
    a.b();
}
